refactor(docs): remove X-Swagger parameter from API documentation
