# docs/swagger.json
@@ -140,14 +140,6 @@
                     "Auth"
                 ],
                 "summary": "Logout user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Logout Successfully",
@@ -306,12 +298,6 @@
                 "summary": "Create topup transaction",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
-                    {
                         "description": "Topup request body",
                         "name": "request",
                         "in": "body",
@@ -371,12 +357,6 @@
                 ],
                 "summary": "Find transfer receivers",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
                     {
                         "maxLength": 100,
                         "type": "string",
@@ -444,14 +424,6 @@
                     "Users"
                 ],
                 "summary": "Get current user profile",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Get Profile Successfully",
@@ -491,12 +463,6 @@
                 ],
                 "summary": "Update current user profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
                     {
                         "description": "Update profile request body",
                         "name": "request",
@@ -561,12 +527,6 @@
                 "summary": "Update current user password",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
-                    {
                         "description": "Update password request body",
                         "name": "request",
                         "in": "body",
@@ -629,12 +589,6 @@
                 ],
                 "summary": "Update current user PIN",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
                     {
                         "description": "Update PIN request body",
                         "name": "request",
@@ -699,12 +653,6 @@
                 "summary": "Check current user PIN",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
-                    {
                         "description": "Check PIN request body",
                         "name": "request",
                         "in": "body",
@@ -764,12 +712,6 @@
                 ],
                 "summary": "Get current user transaction report",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    },
                     {
                         "enum": [
                             "7d"
@@ -836,14 +778,6 @@
                     "Users"
                 ],
                 "summary": "Get current user wallet dashboard",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Set true when using a raw token from Swagger UI",
-                        "name": "X-Swagger",
-                        "in": "header"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Get Dashboard Information Successfully",
